--- a/client/src/app/pages/admin/trips/trip-form/trip-form.component.html
+++ b/client/src/app/pages/admin/trips/trip-form/trip-form.component.html
@@ -8,18 +8,18 @@
     </nz-form-item>
 
     <nz-form-item>
-      <nz-form-label nzFor="country">Kraj</nz-form-label>
+      <nz-form-label nzFor="country">Planeta</nz-form-label>
       <nz-form-control>
-        <input nz-input formControlName="country" type="text" placeholder="Kraj">
+        <input nz-input formControlName="country" type="text" placeholder="Planeta">
       </nz-form-control>
     </nz-form-item>
 
-    <nz-form-item>
-      <nz-form-label nzFor="address">Lokalizacja GPS</nz-form-label>
-      <nz-form-control>
-        <input nz-input formControlName="address" type="text" placeholder="np, 48.19462948350713, 16.378983659182985">
-      </nz-form-control>
-    </nz-form-item>
+<!--    <nz-form-item>-->
+<!--      <nz-form-label nzFor="address">Lokalizacja GPS</nz-form-label>-->
+<!--      <nz-form-control>-->
+<!--        <input nz-input formControlName="address" type="text" placeholder="np, 48.19462948350713, 16.378983659182985">-->
+<!--      </nz-form-control>-->
+<!--    </nz-form-item>-->
 
     <nz-form-item>
       <nz-form-label nzFor="description">Opis</nz-form-label>
