--- a/client/src/app/pages/history/history/history.component.scss
+++ b/client/src/app/pages/history/history/history.component.scss
@@ -1,9 +1,9 @@
 .status-filter {
   margin: 20px 0;
   padding: 15px;
-  border: 1px solid #ddd;
+  border: 1px solid #3b3939;
   border-radius: 8px;
-  background-color: #f9f9f9;
+  background-color: #090808;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   display: flex;
   align-items: center;
@@ -18,8 +18,8 @@
 .status-filter select {
   padding: 8px;
   border-radius: 4px;
-  border: 1px solid #ccc;
-  background-color: white;
+  border: 1px solid #41476c;
+  background-color: #41476c;
 }
 
 .nz-collapse {
@@ -33,7 +33,7 @@
 
 .order-content {
   padding: 20px;
-  background-color: #f8f8f8;
+  background-color: #090808;
   border-radius: 8px;
 }
 
@@ -41,5 +41,5 @@
   margin: 5px 0;
   font-size: 16px;
   line-height: 1.5;
-  color: #333;
+  color: #41476c;
 }
