--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,10 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-  background-color: #f0f2f5;
+  background-color: #000000;
 }
 
 nz-header {
-  background: white !important;
+  background: #000000 !important;
 }
 
 nz-content {
