--- a/client/src/app/pages/admin/trips/trips-list/trips.component.scss
+++ b/client/src/app/pages/admin/trips/trips-list/trips.component.scss
@@ -7,9 +7,9 @@
 .data-item{
   margin: 10px;
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid #090808;
   border-radius: 5px;
-  background-color: #fff;
+  background-color: #090808;
   box-shadow: 0  0 rgba(0,0,0,0.2);
   display: flex;
   flex-direction: row;
