--- a/client/src/app/pages/trips/components/trip-details/trip-details.component.scss
+++ b/client/src/app/pages/trips/components/trip-details/trip-details.component.scss
@@ -32,7 +32,7 @@ display: flex;
   padding-left: 40px;
   font-size: 20px;
   font-weight: 500;
-  color: #000000;
+  color: #ffffff;
   text-justify: inter-word;
   line-height: 1.5;
   font-family: 'Roboto', sans-serif;
